# AutoReach

./: .cursorrules  .env  .env.example  README.md  assistant.json  docker-compose.yml
backend/: .dockerignore  Dockerfile  database.py  email_service.py  llm_service.py  main.py  pyproject.toml  run_live_smee.py  test_vapi.py
backend/.railtracks/data/sessions/: alex-response_0403191d-23d4-41a3-9183-4729032a30dd.json  alex-response_0a41d3ff-182f-4c1b-9c84-971795a6590d.json  alex-response_12e79d2e-5c61-4442-a837-682a63b3fb9c.json  alex-response_199b591e-0fd1-41c1-a2c7-bd517e55136a.json  alex-response_2218f241-ea55-4f8c-b67c-fdd7d67e1fb1.json  alex-response_2633c957-4b76-4a0b-a049-584494f71ebd.json  alex-response_2775cbcf-50a4-4543-a372-c699c5b8fdbb.json  alex-response_38439918-9013-49a1-9f05-5ae3ee198e6c.json  alex-response_408fa20f-a3b1-460c-bbf3-407a1425cfef.json  alex-response_5303098b-27a0-486f-b87f-3962064400f0.json  alex-response_53bf4927-1272-41c4-9c40-a83a6425c04d.json  alex-response_5f16ccc5-34da-468a-96b4-fcb20c017d3a.json  alex-response_607a4152-08fd-4cdf-9bf8-e809cb1b8874.json  alex-response_694901b0-4677-419f-b1bc-8c333f83e47e.json  (+23 more)
backend/chroma_db/: chroma.sqlite3
backend/rag/documents/: call_script.txt  event_organization_guide.txt  fftc_results_summary.txt  foodbank_faq.txt  objection_responses.txt  ottawa_food_resources.txt  pickup_logistics.txt  store_outreach_tracker_summary.txt
backend/routes/: dashboard.py  vapi_calls.py  vapi_webhook.py
backend/services/: call_events.py  langchain_agent.py  ngrok.py  rag_retriever.py  smee.py
(+35 files in other folders)
