[project]
name = "backend"
version = "0.1.0"
description = "FastAPI Backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.5",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "openai>=2.28.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "railtracks>=1.3.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
    "vapi-server-sdk>=1.9.0",
]
